..F....... [ZBX-25461] fixed new high contrast severity icon sizing

--- a/sass/stylesheets/sass/hc-dark.scss
+++ b/sass/stylesheets/sass/hc-dark.scss
@@ -817,7 +817,7 @@ a.link-action {
 		background-image: var(--severity-icon);
 		background-repeat: no-repeat;
 		background-position: center;
-		background-size: contain;
+		background-size: 26px;
 	}
 }
 
