--- a/ui/assets/styles/hc-light.css
+++ b/ui/assets/styles/hc-light.css
@@ -8033,7 +8033,7 @@ td.inactive-bg {
     background-image: var(--severity-icon);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain; }
+    background-size: 26px; }
 
 .na-bg,
 .log-na-bg {
